--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.application.name=Logger Service
-spring.data.mongodb.uri=mongodb://localhost:27017/spring_logger_service
-
+spring.profiles.active=dev
 server.port=8081
